Replace JFoenix with MaterialFX